en np language added

--- a/src/language/en/translation.json
+++ b/src/language/en/translation.json
@@ -7,7 +7,7 @@
   "I": "I'm",
   "motto": "Leading scalable UI development & shaping modern web experiences with clean, efficient code.",
   "about": "About",
-  "me":"Me",
+  "me": "Me",
   "hi": "Hi, I'm",
   "aboutDesc": "a frontend developer who crafts modern, fast, and beautiful web experiences. I specialize in turning complex ideas into elegant, high-performance user interfaces.",
   "aboutObj": "I care deeply about clean code, smooth UX, and products people love using.",
@@ -16,5 +16,21 @@
   "userImpacted": "Users Impacted",
   "viewWork": "View My Work",
   "contactMe": "Contact Me",
-  "profile":"Profile"
+  "profile": "Profile",
+  "education": "Academic",
+  "educationPre": "Pedigree",
+  "educationJourney": "A chronological journey through the institutions that shaped my analytical thinking and technical foundation.",
+  "whatIStudiedUni": "Bachelor of Information Management",
+  "myUniversity": "Tribhuvan University",
+  "universityName": "Shankerdev Campus, Putalisadak Kathmandu",
+  "whatIStudied12": "Higher Secondary (+2 Science)",
+  "collegeName": "Moonlight Secondary School",
+  "collegeLocation": "Kumaripati, Lalitpur.",
+  "whatIStudiedSEE": "Secondary School (SEE)",
+  "schoolName": "Pragati Adarsha English School",
+  "schoolLocation": "Lagankhel, Lalitpur.",
+  "uniyear":"2020 — 2024",
+  "higherYear":"2018 — 2020",
+  "secondaryYear":"2005 — 2018",
+  "latest":"LATEST"
 }
